--- a/src/style.css
+++ b/src/style.css
@@ -11,6 +11,7 @@
   --red-400: #F4D9D2;
   --beige-500: #CC876A;
   --blue-600: #346D9E;
+  --gray-200: #DEDEDE;
 }
 * {
   padding: 0;
@@ -128,11 +129,71 @@ header{
   font-size: 1.5rem;
 }
 
-main {
+/*home */
+.carrossel-img {
+ background-color:#F08AA0;
+ width: 100%;
+ height: 385px;
+}
+
+.releases-section{
   width: 100%;
   max-width: 1244px;
   height: 100vh;
   margin: 0 auto;
+}
+.releases-section > h2 {
+  font-size: 2.25rem;
+  font-weight: 400;
+  text-align: center;
+  padding: 30px 0;
+}
+
+/*cads dos produtos */
+.card{
+  width: 15.1875rem;
+  border-radius: 5px;
+  border: 2px solid var(--gray-200);
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
+}
+.card > .release-tag {
+  background-color: var(--blue-600);
+  width: 5.5rem;
+  padding: 5px 15px;
+  border-radius: 5px;
+
+  color: #FFFDF0;
+  font-weight: 400;
+  font-size: 0.6875rem;
+  text-align: center;
+  font-family: 'Postre';
+  margin-top: -12px;
+
+}
+.card > .product-highlight {
+  padding: 20px 15px;
+}
+.product-highlight > h3{
+  padding-bottom: 20px;
+  font-size: 1.5rem;
+  font-weight: 400;
+}
+
+.product-highlight > div {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+
+}
+.price {
+  font-size: 1.5rem;
+  font-weight: 400;
+  margin-bottom: 10px;
+  font-family: 'Postre';
 }
 
 .blue-text{
